<?xml version="1.0"?>
<package>
    <name>agri_mapper</name>
    <version>1.0.0</version>
    <description>The Main Meta-Package of AgriMapper</description>

    <maintainer email="contact@prajankya.me">Prajankya Sonar</maintainer>

    <license>LGPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>agri_mapper_base</build_depend>
    <build_depend>agri_mapper_bringup</build_depend>
    <build_depend>agri_mapper_simulation</build_depend>
    <build_depend>agri_mapper_description</build_depend>
    <run_depend>agri_mapper_base</run_depend>
    <run_depend>agri_mapper_bringup</run_depend>
    <run_depend>agri_mapper_simulation</run_depend>
    <run_depend>agri_mapper_description</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
