<?xml version="1.0"?>
<package format="2">
    <name>agri_mapper_base</name>
    <version>1.0.0</version>
    <description>This package has all the base nodes of AgriMapper</description>

    <maintainer email="contact@prajankya.me">Prajankya Sonar</maintainer>

    <license>LGPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rospy</depend>

    <depend>tf</depend>
    <depend>nav_msgs</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>

    <depend>rosserial_client</depend>
    <depend>rosserial_arduino</depend>
    <depend>rosserial_python</depend>
    <depend>rosbridge_server</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
