<?xml version="1.0"?>
<package>
    <name>agri_mapper_bringup</name>
    <version>1.0.0</version>
    <description>This package provides BringUp(Start) scripts for AgriMapper</description>

    <maintainer email="contact@prajankya.me">Prajankya Sonar</maintainer>

    <license>LGPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <run_depend>rplidar_ros</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
