<?xml version="1.0"?>
<package>
    <name>agri_mapper_description</name>
    <version>1.0.0</version>
    <description>This package provides a URDF model of AgriMapper</description>

    <maintainer email="contact@prajankya.me">Prajankya Sonar</maintainer>

    <license>LGPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>urdf</build_depend>
    <build_depend>xacro</build_depend>
    <run_depend>urdf</run_depend>
    <run_depend>xacro</run_depend>

    <build_depend>joint_state_publisher</build_depend>
    <build_depend>robot_state_publisher</build_depend>
    <run_depend>joint_state_publisher</run_depend>
    <run_depend>robot_state_publisher</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
